[package]
name = "fs-fuse"
version = "0.0.0"
authors = ["cradle 120602715@sjtu.edu.cn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
fs = { path = "../fs" }
rand = "0.8.0"

# [features]
# board_qemu = []
# board_k210 = []