[package]
name = "user_lib"
version = "0.0.0"
authors = ["cradle  120602715@sjtu.edu.cn"]
edition = "2024"

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
spin = { version = "0.9.8", optional = true }

[features]
default = ["use_spin"]
use_spin = ["spin"]


[profile.release]
debug = true